# cs2_console_input

./: Cargo.toml
src/: main.rs
