[package]
name = "cs2_console_input"
version = "0.1.0"
edition = "2021"

[dependencies]
inputbot = "0.6.0"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
]
